# pico-usb-cdc-ncm-rust

./: Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
firmware/: Cargo.toml  build.rs  memory.x
firmware/.cargo/: config.toml
host-http/: Cargo.toml
host-http/src/: main.rs
